<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="security_and_privacy">安全与隐私</string>
    <string name="destroy_account_title">注销账号</string>
    <string name="destroy_account_desc">通过短信验证码注销账号，注销后所有信息全部销毁，如果想再使用请重新注册！</string>
    <string name="send_sms">获取验证码</string>
    <string name="confirm_destroy">确认注销</string>
    <string name="input_code_hint">请输入短信验证码</string>
    <string name="minor_mode_title">未成年模式</string>
    <string name="minor_mode_desc">保护未成年人健康上网</string>
    <string name="minor_mode_switch_title">启用未成年模式</string>
    <string name="minor_mode_warning_title">未成年模式说明</string>
    <string name="minor_mode_warning_content">启用未成年模式后：\n\n• 每天使用时长不超过40分钟\n• 晚上22:00至次日06:00无法使用\n• 需要监护人验证才能关闭此模式\n\n此功能旨在保护未成年人合理使用网络，营造健康的网络环境。</string>
    <string name="minor_mode_confirm">确认启用</string>
    <string name="minor_mode_cancel">取消</string>
    <string name="minor_mode_enabled">未成年模式已启用</string>
    <string name="minor_mode_disabled">未成年模式已关闭</string>
    <string name="minor_mode_status_on">已开启</string>
    <string name="minor_mode_status_off">已关闭</string>
    <string name="minor_mode_filter_tip">开启未成年人模式后，将严格过滤敏感词</string>
    
    <!-- 监护人密码相关 -->
    <string name="guardian_pwd_setup_title">设置监护人密码</string>
    <string name="guardian_pwd_setup_desc">为了保护未成年人，请设置6位数字密码</string>
    <string name="guardian_pwd_setup_hint">请输入6位数字密码</string>
    <string name="guardian_pwd_confirm_title">确认密码</string>
    <string name="guardian_pwd_confirm_desc">请再次输入密码以确认</string>
    <string name="guardian_pwd_verify_desc">请输入监护人密码以继续操作</string>
    <string name="guardian_pwd_remark">监护人密码用于保护未成年模式设置</string>
    <string name="guardian_pwd_error">密码错误，请重试</string>
    <string name="guardian_pwd_length_error">密码必须为6位数字</string>
    <string name="guardian_pwd_not_match">两次输入的密码不一致</string>
    <string name="guardian_pwd_setup_success">监护人密码设置成功</string>
    <string name="guardian_pwd_forget_title">忘记密码</string>
    <string name="guardian_pwd_forget_desc">为了保护未成年人，监护人密码无法自助重置。\n\n如需重置密码，请联系客服寻求帮助。\n\n客服邮箱：info@xingxunliao.com</string>
</resources>


